--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "color": "^3.1.2",
+    "colors": "^1.3.3",
     "cookie-parser": "~1.4.3",
+    "cuid": "^2.1.6",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "request": "^2.88.0"
   }
 }
